k8s/apps/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s.pane.run`)
    services:
    - name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      port: 443
      scheme: https
      serversTransport: dashboard-transport
  tls:
    secretName: k8s-dashboard-tls
